# Islewright

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  sonar-project.properties  vcpkg.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: BUG_REPORT.md  FEATURE_REQUEST.md
.github/workflows/: macos.yml  sonarcloud.yml  ubuntu.yml  windows.yml
client/: CMakeLists.txt
client/src/: camera.hpp  config.hpp  input.cpp  input.hpp  main.cpp  math.hpp  networkmanager.hpp  tcpconnector.hpp
common/: CMakeLists.txt
common/include/islewright/common/: biome.hpp  chunk.hpp  constants.hpp  coords.hpp  rng.hpp  tile.hpp  utility.hpp  version.hpp  world.hpp
common/src/: version.cpp  world.cpp
common/tests/: world_test.cpp
mockclient/: CMakeLists.txt
mockclient/src/: TcpClient.hpp  main.cpp
server/: CMakeLists.txt
server/src/: IslewrightServer.hpp  IslewrighterServer.hpp  clientInfo.hpp  clientconnector.hpp  clientinfo.hpp  clientsession.hpp  main.cpp  server.hpp
server/src/network/: ClientInfo.hpp  Define.hpp  IOCPServer.hpp  IslewrighterServer.hpp  MemoryPool.hpp
